First Page Coloured

--- a/app/src/main/res/layout-land/activity_first_page.xml
+++ b/app/src/main/res/layout-land/activity_first_page.xml
@@ -13,6 +13,7 @@
         android:layout_height="70dp"
         android:text="Go to Repository"
         android:textSize="20dp"
+        android:background="@color/orange"
         app:layout_constraintBottom_toTopOf="@+id/learn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.514"
@@ -27,6 +28,7 @@
         android:layout_marginBottom="144dp"
         android:text="Learn"
         android:textSize="20dp"
+        android:background="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
@@ -38,6 +40,7 @@
         android:layout_height="64dp"
         android:text="Take Quiz"
         android:textSize="20dp"
+        android:background="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
