--- a/app/src/main/res/layout/activity_first_page.xml
+++ b/app/src/main/res/layout/activity_first_page.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstPage">
+    tools:context=".FirstPage"
+    android:background="@color/black">
 
     <Button
         android:id="@+id/repoLink"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/orange"
         android:text="Go to Repository"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -24,6 +27,7 @@
         android:layout_height="64dp"
         android:layout_marginBottom="32dp"
         android:text="Learn"
+        android:background="@color/purple_200"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/quiz"
@@ -40,7 +44,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/learn"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:background="@color/purple_200"/>
 
     <ImageView
         android:id="@+id/imageView"
