Bottom Sheet Display

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gitBack">#0D1117</color>
     <color name="orange">#FF8000</color>
+    <color name="green">#09E385</color>
 </resources>
