--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,11 @@
     <color name="gitBack">#0D1117</color>
     <color name="orange">#FF8000</color>
     <color name="green">#09E385</color>
+    <color name="yellow">#E309D8</color>
+    <color name="red">#E30910</color>
+    <color name="darkGreen">#025A05</color>
+    <color name="blue">#003366</color>
+    <color name="lightpink">#ff9999</color>
+
+
 </resources>
