--- a/app/src/main/res/layout/activity_quiz_page2.xml
+++ b/app/src/main/res/layout/activity_quiz_page2.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizPage">
+    tools:context=".QuizPage"
+    android:background="@color/blue">
 
     <View
         android:id="@+id/view"
@@ -34,10 +35,108 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hi "
+        android:textColor="@color/white"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.353" />
+
+    <TextView
+        android:id="@+id/question"
+        android:layout_width="match_parent"
+        android:layout_height="76dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="330dp"
+        android:padding="2dp"
+        android:gravity="center"
+        android:paddingStart="14dp"
+        android:background="@drawable/roundedborders"
+        android:text='Q:  Alphabet "a" belongs to which category?'
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/option1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:background="@drawable/roundedborders"
+        android:paddingStart="20dp"
+        android:text="a) Grass Alphabet"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/question"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/option2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/roundedborders"
+        android:paddingStart="20dp"
+        android:text="c) Root Alphabet"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/option3"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/option3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/roundedborders"
+        android:paddingStart="20dp"
+        android:text="b) Sky Alphabet"
+        android:textSize="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/option1"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <Button
+        android:id="@+id/next"
+        android:layout_width="124dp"
+        android:layout_height="62dp"
+        android:layout_marginStart="53dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="94dp"
+        android:background="@drawable/roundedborders"
+        android:text="Next"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toStartOf="@+id/Finish"
+        app:layout_constraintHorizontal_bias="0.363"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/option2" />
+
+    <Button
+        android:id="@+id/Finish"
+        android:layout_width="117dp"
+        android:layout_height="66dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="40dp"
+        android:background="@drawable/roundedborders"
+        android:text="Finish"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/option2" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+        android:progressTint="@color/orange"
+        android:layout_width="match_parent"
+        android:layout_height="25dp"
+        android:progress="0"
+        android:max="100"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
