--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BottomSheet">
+    tools:context=".BottomSheet"
+    android:background="@drawable/bodyback">
 
     <ImageView
         android:id="@+id/imageView2"
