Result Page With Share Button

--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -4,14 +4,117 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".resultActivity"
-    android:background="@color/blue">
-    <ProgressBar
-        android:id="@+id/ProgressBar"
+    android:background="@color/blue"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    tools:context=".MainActivity">
+
+
+    <!--progress bar implementation-->
+
+        <!--Text implementation in center of the progress bar-->
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="?android:attr/progressBarStyleLarge"
-        android:indeterminateDrawable="@drawable/progressbarbg"
-        android:progress="50"
-        />
+        android:id="@+id/myLayout"
+        android:background="@drawable/background">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="104dp"
+            android:layout_marginTop="36dp"
+            android:layout_marginEnd="77dp"
+            android:layout_marginBottom="20dp"
+            android:fontFamily="@font/aldrich"
+            android:text="Result"
+            android:textColor="@color/white"
+            android:textSize="70dp"
+            app:layout_constraintBottom_toTopOf="@+id/progressBar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="281dp"
+            android:layout_height="249dp"
+
+            android:layout_marginStart="69dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginEnd="61dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/progressshape"
+            android:indeterminate="false"
+            android:max="26"
+            android:progress="10"
+            android:progressBackgroundTint="@color/red"
+            android:progressDrawable="@drawable/progressbarbg"
+            android:progressTint="@color/green"
+            android:textAlignment="center"
+            app:layout_constraintBottom_toTopOf="@+id/main"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+        <TextView
+            android:id="@+id/progressText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="10/26"
+            android:textColor="@color/red"
+            android:textSize="50dp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
+            app:layout_constraintEnd_toEndOf="@+id/progressBar"
+            app:layout_constraintStart_toStartOf="@+id/progressBar"
+            app:layout_constraintTop_toTopOf="@+id/progressBar" />
+
+        <Button
+            android:id="@+id/main"
+            android:layout_width="204dp"
+            android:layout_height="97dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="14dp"
+            android:background="@drawable/backwithborder"
+            android:padding="20dp"
+            android:text="Main Screen"
+            android:textSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="200dp"
+            android:layout_height="180dp"
+            android:layout_gravity="right"
+            android:layout_marginStart="120dp"
+            android:layout_marginEnd="91dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/boy" />
+
+        <ImageView
+            android:id="@+id/share"
+            android:layout_width="94dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="58dp"
+            app:layout_constraintBottom_toBottomOf="@+id/main"
+            app:layout_constraintEnd_toStartOf="@+id/main"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/main"
+            app:srcCompat="@drawable/ic_baseline_share_24" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
