--- a/app/src/main/res/drawable/progressbarbg.xml
+++ b/app/src/main/res/drawable/progressbarbg.xml
@@ -1,25 +1,21 @@
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@android:id/background">
-        <shape
-            android:shape="ring"
-            android:innerRadius="64dp"
-            android:thickness="8dp"
-            android:useLevel="false">
+<?xml version="1.0" encoding="utf-8"?>
+<rotate
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromDegrees="270"
+    android:toDegrees="270">
 
-            <solid android:color="@color/red" />
-        </shape>
-    </item>
+    <!--styling the progress bar-->
+    <shape
+        android:innerRadiusRatio="2.5"
+        android:shape="ring"
+        android:thickness="8dp"
+        android:useLevel="true">
+        <gradient
+            android:angle="0"
+            android:endColor="@color/red"
+            android:startColor="#000000"
+            android:type="sweep"
+            android:useLevel="false" />
+    </shape>
 
-    <item android:id="@android:id/progress">
-        <clip>
-            <shape
-                android:shape="ring"
-                android:innerRadius="64dp"
-                android:thickness="8dp"
-                android:useLevel="false">
-
-                <solid android:color="@color/blue" />
-            </shape>
-        </clip>
-    </item>
-</layer-list>
+</rotate>
