--- a/app/src/main/res/layout-land/activity_quiz_page2.xml
+++ b/app/src/main/res/layout-land/activity_quiz_page2.xml
@@ -8,6 +8,7 @@
     tools:context=".QuizPage"
     android:background="@color/blue">
 
+
     <View
         android:id="@+id/view"
         android:layout_width="411dp"
@@ -15,20 +16,8 @@
         android:background="@drawable/quizpageback"
         app:layout_constraintBottom_toTopOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="329dp"
-        android:layout_height="297dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/quizlogo" />
 
     <TextView
         android:id="@+id/name"
@@ -37,87 +26,88 @@
         android:text="Hi "
         android:textColor="@color/white"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/question"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.463"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.033" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="76dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="330dp"
-        android:padding="2dp"
-        android:gravity="center"
-        android:paddingStart="14dp"
         android:background="@drawable/roundedborders"
+        android:gravity="center"
+        android:padding="2dp"
+        android:paddingStart="14dp"
         android:text='Q:  Alphabet "a" belongs to which category?'
         android:textColor="@color/black"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/view"
+        app:layout_constraintVertical_bias="0.324" />
 
     <Button
         android:id="@+id/option1"
         android:layout_width="315dp"
         android:layout_height="60dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="44dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="a) Grass Alphabet"
         android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/option3"
-        app:layout_constraintHorizontal_bias="0.176"
+        app:layout_constraintBottom_toBottomOf="@+id/view"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/next" />
+        app:layout_constraintTop_toBottomOf="@+id/question"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/option2"
         android:layout_width="315dp"
         android:layout_height="60dp"
         android:layout_marginStart="220dp"
-        android:layout_marginTop="29dp"
+        android:layout_marginTop="28dp"
         android:layout_marginEnd="215dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="c) Root Alphabet"
         android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option1"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/option1" />
 
     <Button
         android:id="@+id/option3"
         android:layout_width="315dp"
         android:layout_height="60dp"
+        android:layout_marginStart="36dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="b) Sky Alphabet"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/option1"
+        app:layout_constraintStart_toEndOf="@+id/option1"
         app:layout_constraintTop_toTopOf="@+id/option1"
-        tools:layout_editor_absoluteX="397dp" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/next"
         android:layout_width="124dp"
         android:layout_height="62dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="29dp"
-        android:layout_marginEnd="20dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="284dp"
+        android:layout_marginBottom="18dp"
         android:background="@drawable/roundedborders"
         android:text="Next"
         android:textSize="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/view"
+        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -125,29 +115,29 @@
         android:id="@+id/Finish"
         android:layout_width="123dp"
         android:layout_height="72dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="19dp"
+        android:layout_marginStart="476dp"
+        android:layout_marginEnd="31dp"
         android:background="@drawable/roundedborders"
         android:text="Finish"
         android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/next"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/view"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/next"
+        app:layout_constraintTop_toTopOf="@+id/next" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="4dp"
         android:max="100"
         android:progress="0"
 
         android:progressTint="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
