--- a/app/src/main/res/layout-land/activity_quiz_page2.xml
+++ b/app/src/main/res/layout-land/activity_quiz_page2.xml
@@ -28,9 +28,10 @@
         android:textSize="34sp"
         app:layout_constraintBottom_toTopOf="@+id/question"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.463"
+        app:layout_constraintHorizontal_bias="0.475"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.714" />
 
     <TextView
         android:id="@+id/question"
@@ -48,52 +49,48 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view"
-        app:layout_constraintVertical_bias="0.324" />
+        app:layout_constraintVertical_bias="0.649" />
 
     <Button
         android:id="@+id/option1"
-        android:layout_width="315dp"
-        android:layout_height="60dp"
+        android:layout_width="170dp"
+        android:layout_height="70dp"
         android:layout_marginStart="44dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="a) Grass Alphabet"
         android:textSize="25dp"
-        app:layout_constraintBottom_toBottomOf="@+id/view"
-        app:layout_constraintEnd_toStartOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/option3"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/question"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/question" />
 
     <Button
         android:id="@+id/option2"
-        android:layout_width="315dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="220dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="215dp"
+        android:layout_width="170dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="108dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="c) Root Alphabet"
         android:textSize="25dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.428"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option1" />
+        app:layout_constraintBottom_toBottomOf="@+id/option3"
+        app:layout_constraintStart_toEndOf="@+id/option3"
+        app:layout_constraintTop_toTopOf="@+id/option3"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/option3"
-        android:layout_width="315dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="36dp"
+        android:layout_width="170dp"
+        android:layout_height="70dp"
+        android:layout_marginEnd="308dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="b) Sky Alphabet"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="@+id/option1"
-        app:layout_constraintStart_toEndOf="@+id/option1"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/option1"
         app:layout_constraintVertical_bias="0.0" />
 
@@ -101,13 +98,11 @@
         android:id="@+id/next"
         android:layout_width="124dp"
         android:layout_height="62dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="284dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:background="@drawable/roundedborders"
         android:text="Next"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
