--- a/app/src/main/res/layout-land/activity_first_page.xml
+++ b/app/src/main/res/layout-land/activity_first_page.xml
@@ -9,53 +9,60 @@
 
     <Button
         android:id="@+id/repoLink"
-        android:layout_width="241dp"
-        android:layout_height="70dp"
+        android:layout_width="206dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="90dp"
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/roundedborders"
         android:text="Go to Repository"
         android:textSize="20dp"
-        android:background="@drawable/roundedborders"
         app:layout_constraintBottom_toTopOf="@+id/learn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.514"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.604" />
+        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/learn"
         android:layout_width="126dp"
-        android:layout_height="64dp"
-        android:layout_marginBottom="144dp"
+        android:layout_height="52dp"
+        android:layout_marginStart="93dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="98dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/roundedborders"
         android:text="Learn"
         android:textSize="20dp"
-        android:background="@drawable/roundedborders"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/quiz"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.505"
-        app:layout_constraintStart_toEndOf="@+id/imageView" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView"
+        app:layout_constraintTop_toBottomOf="@+id/repoLink" />
 
     <Button
         android:id="@+id/quiz"
         android:layout_width="125dp"
-        android:layout_height="64dp"
+        android:layout_height="52dp"
+        android:layout_marginEnd="96dp"
+        android:layout_marginBottom="71dp"
+        android:background="@drawable/roundedborders"
         android:text="Take Quiz"
         android:textSize="20dp"
-        android:background="@drawable/roundedborders"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toBottomOf="@+id/learn"
-        app:layout_constraintVertical_bias="0.317" />
+        app:layout_constraintStart_toStartOf="@+id/learn"
+        app:layout_constraintTop_toBottomOf="@+id/learn" />
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="241dp"
-        android:layout_height="411dp"
-        android:scaleType="fitStart"
+        android:layout_width="414dp"
+        android:layout_height="405dp"
+        android:layout_marginBottom="6dp"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/repo" />
 </androidx.constraintlayout.widget.ConstraintLayout>
