--- a/app/src/main/res/layout-land/activity_result.xml
+++ b/app/src/main/res/layout-land/activity_result.xml
@@ -17,29 +17,36 @@
         android:id="@+id/myLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background">
+        android:background="@drawable/background"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="201dp">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="56dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="6dp"
             android:fontFamily="@font/aldrich"
             android:text="Result"
             android:textColor="@color/white"
             android:textSize="70dp"
-            app:layout_constraintBottom_toTopOf="@+id/share"
+            app:layout_constraintBottom_toTopOf="@+id/imageView4"
+            app:layout_constraintEnd_toStartOf="@+id/progressBar"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.172" />
+            app:layout_constraintTop_toBottomOf="@+id/share" />
 
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="249dp"
-            android:layout_height="204dp"
+            android:layout_width="280dp"
+            android:layout_height="238dp"
 
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="60dp"
+            android:layout_marginBottom="113dp"
             android:background="@drawable/progressshape"
             android:indeterminate="false"
             android:max="26"
@@ -49,11 +56,9 @@
             android:progressTint="@color/green"
             android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.657"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.077" />
+            app:layout_constraintEnd_toStartOf="@+id/share"
+            app:layout_constraintStart_toEndOf="@+id/textView"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/progressText"
@@ -71,41 +76,46 @@
 
         <Button
             android:id="@+id/main"
-            android:layout_width="204dp"
-            android:layout_height="97dp"
-            android:layout_marginStart="51dp"
-            android:layout_marginEnd="230dp"
-            android:layout_marginBottom="40dp"
+            android:layout_width="170dp"
+            android:layout_height="75dp"
+            android:layout_marginStart="538dp"
+            android:layout_marginEnd="24dp"
+            android:layout_marginBottom="29dp"
             android:background="@drawable/roundedborders"
             android:padding="20dp"
             android:text="Main Screen"
-            android:textSize="20dp"
+            android:textSize="17dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/imageView4"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView4" />
+            app:layout_constraintTop_toBottomOf="@+id/share" />
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="200dp"
             android:layout_height="180dp"
             android:layout_gravity="right"
-            android:layout_marginEnd="8dp"
-            android:layout_marginBottom="80dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="36dp"
+            android:layout_marginBottom="139dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/progressBar"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView"
             app:srcCompat="@drawable/boy" />
 
         <ImageView
             android:id="@+id/share"
             android:layout_width="94dp"
             android:layout_height="80dp"
-            android:layout_marginStart="56dp"
-            app:layout_constraintEnd_toStartOf="@+id/progressBar"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/progressText"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="70dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="75dp"
+            app:layout_constraintBottom_toTopOf="@+id/main"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/progressBar"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_share_24" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
