--- a/app/src/main/res/layout-land/activity_second_page.xml
+++ b/app/src/main/res/layout-land/activity_second_page.xml
@@ -11,69 +11,78 @@
         android:id="@+id/letter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="10dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="Aa"
         android:textColor="@color/white"
         android:textSize="120dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/label"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.022"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.144" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="327dp"
-        android:layout_height="261dp"
+        android:layout_width="280dp"
+        android:layout_height="361dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/vowel"
-        app:layout_constraintHorizontal_bias="0.435"
-        app:layout_constraintStart_toEndOf="@+id/letter"
+        app:layout_constraintEnd_toStartOf="@+id/sky"
+        app:layout_constraintStart_toEndOf="@+id/label"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.245"
         app:srcCompat="@drawable/apple" />
 
     <TextView
         android:id="@+id/label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="180dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="40dp"
         android:autoSizeTextType="uniform"
         android:fontFamily="@font/alegreya_sc"
         android:text="Apple"
         android:textColor="@color/white"
         android:textSize="70dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.59"
+        app:layout_constraintEnd_toStartOf="@+id/image"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/image" />
+        app:layout_constraintTop_toBottomOf="@+id/letter" />
 
     <TextView
         android:id="@+id/vowel"
         android:layout_width="218dp"
         android:layout_height="62dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="49dp"
+        android:layout_marginTop="130dp"
         android:layout_marginEnd="20dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="Consonant"
         android:textColor="@color/white"
         android:textSize="35dp"
         android:textStyle="bold|italic"
+        app:layout_constraintBottom_toTopOf="@+id/sky"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/sky"
         android:layout_width="201dp"
         android:layout_height="98dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="58dp"
         android:fontFamily="@font/alegreya_sc"
         android:text="Sky Alphabet"
         android:textColor="@color/white"
         android:textSize="35dp"
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/vowel"
         app:layout_constraintTop_toBottomOf="@+id/vowel"
         app:layout_constraintVertical_bias="0.183" />
@@ -82,17 +91,20 @@
         android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="103dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="76dp"
+        android:layout_marginBottom="20dp"
         android:backgroundTint="@color/black"
         android:drawableBottom="@drawable/play"
         android:fontFamily="@font/alegreya_sc"
         android:text="Play"
         android:textColor="@color/white"
         android:textSize="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/label"
-        app:layout_constraintHorizontal_bias="0.213"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/letter" />
+        app:layout_constraintBottom_toTopOf="@+id/vowel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/image"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
