--- a/app/src/main/res/layout-land/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout-land/fragment_bottom_sheet.xml
@@ -11,43 +11,46 @@
         android:id="@+id/imageView2"
         android:layout_width="363dp"
         android:layout_height="316dp"
-        android:layout_marginBottom="68dp"
         android:scaleType="centerCrop"
         android:src="@drawable/quizlogo"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.467"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="319dp"
-        android:layout_height="87dp"
-        android:layout_marginEnd="16dp"
+        android:layout_width="298dp"
+        android:layout_height="67dp"
         android:background="@drawable/backwithborder"
         android:ems="10"
         android:hint="   Enter Your Name"
         android:inputType="textPersonName"
         android:paddingLeft="15dp"
+        app:layout_constraintBottom_toBottomOf="@+id/submit"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        tools:layout_editor_absoluteY="54dp" />
+        app:layout_constraintHorizontal_bias="0.083"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/submit"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/submit"
-        android:layout_width="311dp"
-        android:layout_height="86dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="214dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="47dp"
+        android:layout_marginBottom="72dp"
         android:background="@drawable/backwithborder"
         android:text="Submit"
         android:textColor="@color/green"
         android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.912"
-        app:layout_constraintStart_toEndOf="@+id/imageView2"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
-        app:layout_constraintVertical_bias="0.163" />
+        app:layout_constraintHorizontal_bias="0.972"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
