--- a/app/src/main/res/layout/activity_quiz_page2.xml
+++ b/app/src/main/res/layout/activity_quiz_page2.xml
@@ -5,27 +5,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuizPage"
-    android:background="@color/blue">
-
-    <View
-        android:id="@+id/view"
-        android:layout_width="411dp"
-        android:layout_height="270dp"
-        android:background="@drawable/quizpageback"
-        app:layout_constraintBottom_toTopOf="@+id/imageView3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    android:background="@color/blue"
+    tools:context=".QuizPage">
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="329dp"
-        android:layout_height="297dp"
+        android:layout_width="241dp"
+        android:layout_height="193dp"
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/quizlogo" />
@@ -34,54 +22,58 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="88dp"
         android:text="Hi "
         android:textColor="@color/white"
         android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.353" />
+        app:layout_constraintBottom_toTopOf="@+id/question"
+        app:layout_constraintEnd_toEndOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="@+id/imageView3"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintVertical_bias="0.25" />
 
     <TextView
         android:id="@+id/question"
         android:layout_width="match_parent"
         android:layout_height="76dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="330dp"
-        android:padding="2dp"
-        android:gravity="center"
-        android:paddingStart="14dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginBottom="3dp"
         android:background="@drawable/roundedborders"
+        android:gravity="center"
+        android:padding="2dp"
+        android:paddingStart="14dp"
         android:text='Q:  Alphabet "a" belongs to which category?'
         android:textColor="@color/black"
         android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.0"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toTopOf="@+id/option1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView3" />
 
     <Button
         android:id="@+id/option1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="a) Grass Alphabet"
         android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/option3"
         app:layout_constraintTop_toBottomOf="@+id/question"
-        tools:layout_editor_absoluteX="0dp" />
+        tools:layout_editor_absoluteX="16dp" />
 
     <Button
         android:id="@+id/option2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginBottom="66dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="c) Root Alphabet"
         android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/Finish"
         app:layout_constraintTop_toBottomOf="@+id/option3"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -89,11 +81,13 @@
         android:id="@+id/option3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:background="@drawable/roundedborders"
         android:paddingStart="20dp"
         android:text="b) Sky Alphabet"
         android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/option2"
         app:layout_constraintTop_toBottomOf="@+id/option1"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -101,15 +95,14 @@
         android:id="@+id/next"
         android:layout_width="124dp"
         android:layout_height="62dp"
-        android:layout_marginStart="53dp"
-        android:layout_marginTop="12dp"
-        android:layout_marginEnd="94dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="68dp"
         android:background="@drawable/roundedborders"
         android:text="Next"
         android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/progressBar"
         app:layout_constraintEnd_toStartOf="@+id/Finish"
-        app:layout_constraintHorizontal_bias="0.363"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/option2" />
 
@@ -117,24 +110,24 @@
         android:id="@+id/Finish"
         android:layout_width="117dp"
         android:layout_height="66dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="32dp"
         android:background="@drawable/roundedborders"
         android:text="Finish"
         android:textSize="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/progressBar"
+        app:layout_constraintBottom_toBottomOf="@+id/next"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/option2" />
+        app:layout_constraintTop_toTopOf="@+id/next" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:progressTint="@color/orange"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:progress="0"
+        android:layout_marginBottom="6dp"
         android:max="100"
 
+        android:progress="0"
+        android:progressTint="@color/orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />"/>
