--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -24,8 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="104dp"
-            android:layout_marginTop="36dp"
+            android:layout_marginStart="80dp"
             android:layout_marginEnd="77dp"
             android:layout_marginBottom="20dp"
             android:fontFamily="@font/aldrich"
@@ -45,7 +44,7 @@
             android:layout_height="249dp"
 
             android:layout_marginStart="69dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:layout_marginEnd="61dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/progressshape"
@@ -77,15 +76,15 @@
 
         <Button
             android:id="@+id/main"
-            android:layout_width="204dp"
-            android:layout_height="97dp"
+            android:layout_width="170dp"
+            android:layout_height="75dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="39dp"
             android:layout_marginBottom="14dp"
             android:background="@drawable/roundedborders"
             android:padding="20dp"
             android:text="Main Screen"
-            android:textSize="20dp"
+            android:textSize="17dp"
             app:layout_constraintBottom_toTopOf="@+id/imageView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/progressBar" />
@@ -97,11 +96,12 @@
             android:layout_gravity="right"
             android:layout_marginStart="120dp"
             android:layout_marginEnd="91dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/main"
             app:srcCompat="@drawable/boy" />
 
         <ImageView
